Setup C artifact